--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins&display=swap');
+
 /* || Utilities */
 * {
     margin: 0;
@@ -5,6 +7,10 @@
     box-sizing: border-box;
     font-size: 62.5%;
     font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+}
+
+h1 {
+    font-family: 'Playfair Display', 'Helvetica', 'Arial', sans-serif;
 }
 
 li {
@@ -27,25 +33,23 @@ button {
 }
 
 img {
-    width: 100%;
+    width: auto;
     height: auto;
 }
 
 /* || Hero Section */
 
 header {
-    height: 100vh;
+    color: #FFFFFF;
     background-color: #0D4A31;
+    /*background: linear-gradient(130.41deg, #1F8058 -48.15%, #0D4A31 64.12%);*/
     background-image: url('./icons/BACKGROUND\ 1.svg');
     background-position: right top -1vw;
     background-repeat: no-repeat;
     background-blend-mode: multiply;
 }
 
-.logo h1{
-    font-size: 2.143rem;
-}
-
+/* || Navbar */
 nav {
     padding: 5rem 4vw;
     display: flex;
@@ -57,6 +61,61 @@ nav ul li {
     display: inline-block;
     margin-left: 4vw;
 }
+/* || Navbar End*/
 
+.hero {
+    display: flex;
+    flex-wrap: wrap;
+}
 
+.hero-text {
+    padding-left: 4vw;
+    flex-basis: 45%;
+    display: flex;
+    flex-direction: column;
+}
+.hero-img {
+    flex-basis: 55%;
+    display: flex;
+    justify-content: center;
+}
 
+.hero h1 {
+    width: 80%;
+    font-size: 5.2rem;
+    line-height: 6.5rem;
+    flex-grow: 0.5;
+}
+
+.hero-img{
+    width: auto
+}
+.hero p {
+    font-size: 1.6rem;
+    line-height: 3.5rem;
+    flex-grow: 1;
+}
+.btn {
+    flex-grow: 1;
+}
+.btn button {
+    font-size: 1.4rem;
+    margin-right: 2.4rem;
+    padding: 2.4rem 3.7rem;
+    font-weight: 700;
+    color: #2B2B31;
+}
+
+#watch-video{
+    color: #FFFFFF;
+    border: none;
+    background: transparent;
+}
+
+.small-images {
+    flex-grow: 1;
+}
+
+.small-images img {
+    margin-right: 1.6rem;
+}
