--- a/style.css
+++ b/style.css
@@ -15,6 +15,15 @@ h1, h2, h3 {
     font-weight: bold;
 }
 
+h2 {
+    font-size: 3.2rem;
+}
+
+p {
+    font-size: 1.6rem;
+    line-height: 3.5rem;
+}
+
 li {
     list-style-type: none;
 }
@@ -37,6 +46,13 @@ button {
 img {
     width: auto;
     height: auto;
+}
+
+hr {
+    margin: 1rem 0;
+    border: 3px solid #BECEC7;
+    border-radius: 5px;
+    width: 65px;
 }
 
 @media (max-width: 768px) {
@@ -139,8 +155,6 @@ nav box-icon {
 
 .hero p {
     width: 85%;
-    font-size: 1.6rem;
-    line-height: 3.5rem;
     flex-grow: 1;
 }
 .btn {
@@ -236,7 +250,7 @@ nav box-icon {
 
 /* || Card Section */
 .policies {
-    padding: 15rem 13vw;
+    margin: 15rem 13vw;
     position: relative;
 }
 
@@ -248,7 +262,7 @@ nav box-icon {
     margin: 2rem 0;
     display: flex;
     flex-wrap: wrap;
-    gap: 3rem;
+    justify-content: space-between;
 }
 
 .policy {
@@ -257,6 +271,7 @@ nav box-icon {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    box-shadow: 0px 15px 34px rgba(33, 37, 106, 0.1);
 }
 
 .policy h3 {
@@ -274,20 +289,13 @@ nav box-icon {
     flex-shrink: 1;
 }
 
-.policies hr {
-    margin: 1rem 0;
-    border: 3px solid #BECEC7;
-    border-radius: 5px;
-    width: 65px;
-}
-
 .policies button {
     font-size: 1.5rem;
     padding: 1.6rem 4rem;
     font-weight: 500;
     color: #2B2B31;
     position: absolute;
-    left: 40vw;
+    left: 37%;
     margin-top: 4.2rem;
 }
 
@@ -311,7 +319,101 @@ nav box-icon {
     }
 
     .policies button {
-        left: 30vw;
+        left: 30%;
     }
     
 }
+
+@media only screen and (max-width: 425px) {
+    .policies button {
+        left: 20%;
+    }
+}
+/* || Card Section End */
+
+/* || About Section */
+.about {
+    display: flex;
+    margin: 15rem 13vw;
+    justify-content: space-between;
+}
+
+.about-right, .about-left {
+    flex-basis: 45%;
+}
+
+.about-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.about-left p {
+    font-weight: 300;
+    color: #4F4F4F;
+    padding-top: 5rem;
+}
+
+.about-right{
+    height: 41.8rem;
+    display: grid;
+    grid-template-columns: 0.9fr 0.1fr 1fr 0.1fr;
+    grid-template-rows: 0.9fr 0.1fr 1fr 0.1fr;
+}
+
+.one, .two, .three, .four {
+    width: 100%;
+    height: 100%;
+}
+
+.one{
+    grid-row: 1/3;
+    grid-column: 1/3;
+    background-color: #0D4A31;
+    border-right: 2px solid #ADB2FF;
+    border-bottom: 2px solid #ADB2FF;
+    border-top-left-radius: 15px;
+}
+
+.two {
+    grid-row: 1/3;
+    grid-column: 3/4;
+    background-color: #0D4A31;
+    border-top-right-radius: 15px;
+}
+
+.three {
+    grid-row: 3/4;
+    grid-column: 1/3;
+    background-color: #0D4A31;
+    border-bottom-left-radius: 15px;
+}
+
+.four{
+    grid-row: 2/5;
+    grid-column: 2/5;
+    background-color: #FFFFFF;
+    box-shadow: 0px 16.0256px 36.3248px rgba(18, 87, 59, 0.25);
+    border-radius: 5.34188px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.4rem;
+}
+
+.about-right h2, .about-right p {
+    text-align: center;
+    font-family: 'Roboto';
+    color: #FFFFFF;
+}
+
+.about-right h2{
+    padding-top: 25%;
+}
+
+@media only screen and (max-width: 425px) {
+    .about {
+        flex-direction: column;
+        gap: 2rem;
+    }
+}
+
