--- a/style.css
+++ b/style.css
@@ -19,6 +19,13 @@ h2 {
     font-size: 3.2rem;
 }
 
+h4 {
+    font-size: 1.6rem;
+    font-weight: 500;
+    font-family: 'Roboto';
+    color: #093624;
+}
+
 p {
     font-size: 1.6rem;
     line-height: 3.5rem;
@@ -471,6 +478,10 @@ nav box-icon {
     
 }
 
+/* || Review Section End*/
+
+/* || Footer Section */
+
 footer {
     background-color: #0D4A31;
 }
@@ -489,6 +500,7 @@ footer {
     display: flex;
     flex-direction: column;
     gap: 4.2rem;
+    justify-content: flex-end;
 }
 
 .description{
@@ -502,16 +514,20 @@ footer {
     border-radius: 5px;
     padding: 1.5rem;
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 0.8fr 4.2fr;
     grid-template-rows: repeat(3, 1fr);
+    row-gap: 2rem;
+    column-gap: 1rem;
+    padding-top: 3rem;
+    padding-bottom: 5rem;
 }
 
 .icon {
     border-radius: 50%;
     background: linear-gradient(132.41deg, #1F8058 15.91%, #0D4A31 88.35%);
     justify-self: center;
-    width: 50%;
-    height: 60%;
+    width: 70%;
+    height: 90%;
     display: flex;
 }
 
@@ -519,4 +535,59 @@ footer {
     margin: auto;
 }
 
+.information p {
+    font-size: 1.4rem;
+    font-weight: 300;
+    color: #272D95;
+    opacity: 0.6;
+}
 
+.contact-form form {
+    display: flex;
+    flex-direction: column;
+    padding: 4rem;
+    gap: 4rem;
+    background-color: #FFFFFF;
+    border-radius: 5px;
+}
+
+.contact-form form button{
+    align-self: flex-end;
+}
+
+input {
+    height: 4.8rem;
+}
+
+::placeholder{
+    font-size: 1.4rem;
+    padding-left: 2rem;
+}
+
+form button {
+    padding: 16px 36px;
+    background-color: #6C74F4;
+    color: #FFFFFF;
+    border-radius: 5px;
+    border-color: #6C74F4;
+}
+
+@media only screen and (max-width: 430px) {
+    .two-column {
+        flex-direction: column;
+        gap: 3rem;
+    }
+
+    .icon {
+        width: 80%;
+        height: 50%;
+    }
+
+    input {
+        height: 4rem;
+    }
+
+    textarea{
+        height: 10rem;
+    }
+}
