--- a/media-query.css
+++ b/media-query.css
@@ -73,6 +73,12 @@
 }
 
 /* || policies */
+@media only screen and (max-width: 768px){
+    .policies {
+        padding-top: 5rem;
+    }
+}
+
 @media only screen and (max-width: 430px) {
     .row {
         flex-direction: column;
@@ -105,6 +111,14 @@
 }
 
 /* || about */
+@media only screen and (max-width: 768px){
+    .about {
+        padding-top: 5rem;
+        padding-bottom: 5rem;
+    }
+}
+
+
 @media only screen and (max-width: 430px) {
     .about {
         flex-direction: column;
@@ -116,8 +130,20 @@
 
 }
 
+@media only screen and (max-width: 768px) {
+    .about-left img {
+        width: 100%;
+    }
+}
+
 /* || review */
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width: 768px){
+    .review-section {
+        padding-top: 5rem;
+        padding-bottom: 5rem;
+    }
+}
+@media only screen and (max-width: 768px) {
     .reviews {
         flex-direction: column;
     }
@@ -129,6 +155,12 @@
 }
 
 /* || footer */
+@media only screen and (max-width: 768px){
+    .two-column {
+        padding-top: 5rem;
+        padding-bottom: 5rem;
+    }
+}
 
 @media only screen and (max-width: 430px) {
     .two-column {
