--- a/media-query.css
+++ b/media-query.css
@@ -21,9 +21,11 @@
     }
 
     nav ul {
+        margin-top: 1.5rem;
         display: none;
         align-self: flex-start;
         background: #FFFFFF;
+        border-radius: 10px;
         width: 100%;
     }
 
@@ -62,6 +64,7 @@
 
     .small-images img {
         max-width: 30%;
+        margin-right: 1.2rem;
     }
 
     #qualified {
