--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ nav box-icon {
 
 .hero-text {
     padding-left: 4vw;
-    flex-basis: 50%;
+    flex-basis: 45%;
     display: flex;
     flex-direction: column;
 }
@@ -132,7 +132,6 @@ nav box-icon {
 }
 
 .small-images {
-    display: flex;
     flex-grow: 1;
 }
 
@@ -154,7 +153,8 @@ nav box-icon {
 /* || Card Section */
 .policies {
     padding: 15rem 13vw;
-    position: relative;
+    display: flex;
+    flex-direction: column;
 }
 .row {
     display: flex;
@@ -191,9 +191,8 @@ nav box-icon {
     padding: 1.6rem 4rem;
     font-weight: 500;
     color: #2B2B31;
-    position: absolute;
-    left: 42%;
     margin-top: 4.2rem;
+    align-self: center;
 }
 
 /* || Card Section End */
