--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ nav box-icon {
 }
 .row {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     gap: 4.5rem;
     flex-wrap: wrap;
 }
@@ -168,6 +168,9 @@ nav box-icon {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+}
+
+.policy:hover {
     box-shadow: 0px 15px 34px rgba(33, 37, 106, 0.1);
 }
 
@@ -212,6 +215,11 @@ nav box-icon {
     font-weight: 300;
     color: #4F4F4F;
     padding-top: 5rem;
+    width: 90%;
+}
+
+.about-text h2{
+    width: 65%;
 }
 
 .about-right{
@@ -288,8 +296,8 @@ nav box-icon {
     padding-right: 13vw;
     background-image: url('./icons/Vector\ 26.svg'), url('./icons/“.svg');
     background-repeat: no-repeat;
-    background-size: cover, 40% 40%;
-    background-position: center, right 5rem top 20rem;
+    background-size: cover, 25% 55%;
+    background-position: center, right 15rem top 12rem;
     position: relative;
     background-blend-mode: multiply;
 }
@@ -405,6 +413,7 @@ input {
 
 textarea{
     font-size: 1.5rem;
+    padding-top: 5px;
     padding-left: 1rem;
     flex-grow: 1;
 }
@@ -412,6 +421,7 @@ textarea{
 ::placeholder{
     font-size: 1.4rem;
     padding-left: 2rem;
+    padding-top: 2rem;
 }
 
 form button {
